@@ -1,3 +1,7 @@
+2007-02-27  Sven Neumann  <sven@gimp.org>
+
+	* app/base/pixel-surround.c: documentation.
+
 2007-02-27  Michael Natterer  <mitch@gimp.org>
 
 	* app/tools/gimptool.[ch]: clean up last commit a bit. Pass the
